gcc/testsuite/rust/rustc/ui/issues/issue-45829/rename-use-vs-extern.rs
// aux-build:issue-45829-b.rs

extern crate issue_45829_b;
use std as issue_45829_b;
// { dg-error ".E0254." "" { target *-*-* } .-1 }

fn main() {}

